grammar.js
    program: ($) =>
      repeat(choice($._statement, $._declaration, $.enum, ";")),

    // --- Declarations ---

    _declaration: ($) =>
      choice(
        $.method,
        $.class,
        $.module,
        $.export_method,
        $.type_alias,
      ),

    method: ($) =>
      method($, choice(
        $.constant,
        $.identifier,
        $.setter_name,
        $.self_method_name,
        $.operator_name,
      )),

    setter_name: ($) =>
      seq($.identifier, token.immediate("=")),

    _visibility_modifier: ($) =>
      choice(
        "private",
        alias($._public_keyword, "public"),
        alias($._protected_keyword, "protected"),
      ),

    operator_name: (_$) =>
      choice(
        "+", "-", "*", "/", "//", "%", "**", "<<", "&",
        "==", "!=", "<", "<=", ">", ">=", "<=>",
        "[]", "[]=",
      ),

    self_method_name: ($) =>
      seq("self", ".", choice($.identifier, $.constant), optional(token.immediate("="))),

    parameters: ($) =>
      prec.dynamic(10, seq(
        "(",
        optional(
          seq(
            $._parameter,
            repeat(seq(",", $._parameter)),
            optional(","),
          ),
        ),
        ")",
      )),

    bare_parameters: ($) =>
      seq($._bare_parameter_start, $._parameter, repeat(seq(",", $._parameter))),

    _parameter: ($) =>
      choice(
        $.typed_parameter,
        $.ivar_parameter,
        $.splat_parameter,
        $.double_splat_parameter,
        $.keyword_separator,
        $.block_parameter,
      ),

    keyword_separator: (_$) => "*",

    block_parameter: ($) =>
      seq("&", field("name", choice($.identifier, $.constant)), token(prec(3, ":")), $.block_type),

    block_type: ($) =>
      seq(
        choice($.type_annotation, seq("(", optional(seq(
          $.type_annotation, repeat(seq(",", $.type_annotation)),
        )), ")")),
        optional(seq("->", $.type_annotation)),
      ),

    typed_parameter: ($) =>
      seq(
        field("name", choice($.identifier, $.constant)),
        token(prec(3, ":")),
        $.type_annotation,
        optional(seq("=", $._expression)),
      ),

    ivar_parameter: ($) =>
      seq(
        $.instance_variable,
        token(prec(3, ":")), $.type_annotation,
        optional(seq("=", $._expression)),
      ),

    splat_parameter: ($) =>
      seq("*", field("name", choice($.identifier, $.constant)), token(prec(3, ":")), $.type_annotation),

    double_splat_parameter: ($) =>
      seq("**", field("name", choice($.identifier, $.constant)), token(prec(3, ":")), $.type_annotation),

    type_annotation: ($) =>
      seq(
        $._type,
        repeat(seq("|", $._type)),
      ),

    _type: ($) =>
      seq(choice(
        $.type_name,
        $.qualified_type_name,
        $.type_shape,
        $.type_tuple,
      ), optional("?")),

    type_alias: ($) =>
      seq("type", field("name", $.constant), "=", $.type_annotation),

    type_name: ($) =>
      seq(
        choice(
          $.identifier,
          $.constant,
          "nil",
          "type",
        ),
        optional($.type_arguments),
      ),

    type_arguments: ($) =>
      seq(
        "<",
        $.type_annotation,
        repeat(seq(",", $.type_annotation)),
        ">",
      ),

    type_shape: ($) =>
      seq(
        choice("{", alias($._block_open, "{")),
        optional(seq(
          choice("...", seq($.type_shape_field,
            repeat(seq(",", $.type_shape_field)), optional(seq(",", "...")))),
          optional(","),
        )),
        "}",
      ),

    type_shape_field: ($) =>
      seq(
        field("name", choice($.identifier, $.constant, $.string, $.symbol, $.quoted_symbol)),
        optional("?"),
        token(prec(3, ":")),
        $.type_annotation,
      ),

    return_type: ($) =>
      seq(
        alias($._signature_arrow, "->"),
        $.type_annotation,
      ),

    class: ($) =>
      seq(
        "class",
        field("name", choice($.constant, $.identifier)),
        optional(field("body", alias($._class_body, $.class_body))),
        "end",
      ),

    _class_body: ($) =>
      repeat1(
        choice(
          ";",
          $.property_declaration,
          $.getter_declaration,
          $.setter_declaration,
          $.class_variable_assignment,
          $.method,
          $.visibility_directive,
          $.alias_method,
          $.class,
          $.type_alias,
          $._statement,
        ),
      ),

    accessor_name: ($) =>
      seq(
        $.identifier,
        optional(seq(token(prec(3, ":")), $.type_annotation)),
      ),

    property_declaration: ($) =>
      seq(
        optional(field("visibility", $._visibility_modifier)),
        "property",
        $.accessor_name,
        repeat(seq(",", $.accessor_name)),
      ),

    getter_declaration: ($) =>
      seq(
        optional(field("visibility", $._visibility_modifier)),
        "getter",
        $.accessor_name,
        repeat(seq(",", $.accessor_name)),
      ),

    setter_declaration: ($) =>
      seq(
        optional(field("visibility", $._visibility_modifier)),
        "setter",
        $.accessor_name,
        repeat(seq(",", $.accessor_name)),
      ),

    class_variable_assignment: ($) =>
      seq(
        $.class_variable,
        optional(seq(token(prec(3, ":")), $.type_annotation)),
        "=",
        $._expression,
      ),

    // --- Statements ---

    _statement: ($) =>
      choice($.alias, $._non_alias_statement),

    command_call: ($) =>
      prec.right(seq(
        field("method", choice($.identifier, $.constant, $.member_access)),
        $._command_start,
        field("arguments", $.command_arguments),
        optional($.block),
      )),

    command_arguments: ($) =>
      prec.right(seq(
        $._command_argument,
        repeat(seq(",", $._command_argument)),
      )),

    _command_argument: ($) =>
      choice(
        $._argument,
        $.endless_range,
      ),

    assignment: ($) =>
      prec.right(PREC.ASSIGNMENT, seq(
        choice($.parenthesized_target, $._expression),
        "=",
        $._rhs_expression,
      )),

    _rhs_expression: ($) =>
      choice(
        $._expression,
        $.endless_range,
      ),

    destructuring_assignment: ($) =>
      prec.right(PREC.ASSIGNMENT, seq(
        field("left", choice(seq(
          $._destructure_target,
          repeat1(seq(",", $._destructure_target)),
        ), $.splat_target, $.destructured_target)),
        "=",
        field("right", seq(
          $._expression,
          repeat(seq(",", $._expression)),
        )),
      )),

    // Safe navigation is read-only and rejected anywhere in an assignment
    // target, so member and index targets build on dot-only receiver
    // chains: `user&.name`, `user&.profile.name`, and `user&.items[0]` all
    // error as in the interpreter.
    _destructure_target: ($) =>
      choice(
        $.identifier,
        $.constant,
        $.instance_variable,
        $.class_variable,
        alias($._assignable_member_access, $.member_access),
        alias($._assignable_subscript, $.subscript),
        $.splat_target,
        $.destructured_target,
      ),

    _assignable_member_access: ($) =>
      prec.left(PREC.CALL - 1, seq(
        $._assignable_receiver,
        ".",
        $.identifier,
      )),

    _assignable_subscript: ($) =>
      prec(PREC.CALL, seq(
        $._assignable_receiver,
        alias($._index_open, "["),
        $._expression_or_closed_range,
        repeat(seq(",", $._expression_or_closed_range)),
        "]",
      )),

    destructured_target: ($) =>
      choice(
        seq("(", $._destructure_target, repeat(seq(",", $._destructure_target)), ")"),
        seq("[", $._destructure_target, repeat(seq(",", $._destructure_target)), "]"),
      ),

    splat_target: ($) =>
      seq("*", optional(choice($.identifier, $.constant, alias($._assignable_member_access, $.member_access), alias($._assignable_subscript, $.subscript)))),

    compound_assignment: ($) =>
      prec.right(PREC.ASSIGNMENT, seq(
        choice($.parenthesized_target, $._expression),
        choice("+=", "-=", "*=", "/=", "//=", "%=", "**=", "||=", "&&="),
        $._rhs_expression,
      )),

    raise: ($) =>
      prec.right(seq(
        "raise",
        optional(choice(
          prec.dynamic(10, seq("(", $._expression, ")")),
          seq($._argument, repeat(seq(",", $._argument))),
        )),
      )),

    yield: ($) =>
      prec.right(seq(
        "yield",
        optional(choice(
          prec.dynamic(10, seq(choice(alias($._call_open, "("), "("), optional($.argument_list), ")")),
          $.argument_list,
        )),
      )),

    if: ($) =>
      seq(
        "if",
        field("condition", $._expression),
        optional("then"),
        optional($._body),
        repeat($.elsif),
        optional($.else),
        "end",
      ),

    for: ($) =>
      seq(
        "for",
        field("variable", $._for_target),
        repeat(seq(",", field("variable", $._for_target))),
        "in",
        field("iterable", $._expression),
        optional($._body),
        "end",
      ),

    _for_target: ($) =>
      choice(
        $.identifier,
        $.constant,
        $.splat_target,
        alias($._for_target_group, $.destructured_target),
      ),

    begin: ($) =>
      seq(
        "begin",
        optional($._body),
        optional(seq(repeat1($.rescue), optional($.else))),
        optional($.ensure),
        "end",
      ),

    rescue: ($) =>
      seq(
        "rescue",
        optional(choice(
          prec.dynamic(10, seq("(", $._rescue_type, ")")),
          $._rescue_type,
        )),
        optional(seq("=>", field("binding", choice($.identifier, $.constant)))),
        optional($._body),
      ),

    _rescue_type: ($) =>
      seq(
        choice($.constant, $.scoped_constant),
        repeat(seq("|", choice($.constant, $.scoped_constant))),
      ),

    _expression: ($) =>
      choice(
        $.yield,
        $.command_call,
        $.assignment,
        $.compound_assignment,
        $.ternary,
        $.binary,
        $.unary,
        $.beginless_range,
        $.rescue_modifier,
        $.call,
        $.member_access,
        $.computed_call,
        $.scope_resolution,
        $.subscript,
        $._primary,
      ),

    binary: ($) =>
      choice(
        prec.left(PREC.OR, seq($._expression, "||", $._expression)),
        prec.left(PREC.AND, seq($._expression, "&&", $._expression)),
        prec.left(PREC.EQUALITY, seq($._expression, choice("==", "===", "!=", "=~", "!~"), $._expression)),
        prec.left(PREC.COMPARISON, seq($._expression, choice("<", ">", "<=", ">=", "<=>"), $._expression)),
        prec.left(PREC.RANGE, seq($._expression, choice("..", "..."), $._expression)),
        prec.left(PREC.BIT_AND, seq($._expression, "&", $._expression)),
        prec.left(PREC.SHIFT, seq($._expression, "<<", $._expression)),
        prec.left(PREC.ADDITIVE, seq($._expression, choice("+", "-"), $._expression)),
        prec.left(PREC.MULTIPLICATIVE, seq($._expression, choice(alias($._multiply, "*"), alias($._divide, "/"), "/", "//", "%"), $._expression)),
        prec.right(PREC.POWER, seq($._expression, "**", $._expression)),
      ),

    // Dynamic -1: when GLR can read `expr .. expr` either as one binary range
    // or as `expr` followed by a beginless-range statement, the binary range
    // wins.
    _expression_or_closed_range: ($) =>
      choice(
        $._expression,
        alias($._endless_range_closed, $.endless_range),
      ),

    // The external keyword only fires on the body's own line, so a `rescue`
    // opening a new line always reads as a begin/def rescue clause.
    rescue_modifier: ($) =>
      prec.left(PREC.RESCUE, seq(
        field("body", $._expression),
        alias($._rescue_modifier_keyword, "rescue"),
        field("handler", $._expression),
      )),

    call: ($) =>
      prec.right(PREC.CALL, choice(
        seq(
          field("receiver", optional(seq($._expression, choice(".", "&.")))),
          field("method", choice($.identifier, $.constant)),
          alias($._call_open, "("),
          optional($.argument_list),
          ")",
          optional($.block),
        ),
        seq(
          field("receiver", optional(seq($._expression, choice(".", "&.")))),
          field("method", choice($.identifier, $.constant)),
          $.block,
        ),
      )),

    computed_call: ($) => prec.dynamic(-5, prec(PREC.CALL, choice(
      seq(field("function", $._expression), alias($._call_open, "("), optional($.argument_list), ")", optional($.block)),
      seq(field("function", $.parenthesized), $.block),
    ))),

    member_access: ($) =>
      prec.left(PREC.CALL - 1, seq(
        $._expression,
        choice(".", "&."),
        choice($.identifier, $.constant, $.operator_name),
        optional($.block),
      )),

    subscript: ($) =>
      prec(PREC.CALL, seq(
        $._expression,
        alias($._index_open, "["),
        $._expression_or_closed_range,
        repeat(seq(",", $._expression_or_closed_range)),
        "]",
      )),

    block: ($) =>
      seq($._block_open, optional($.block_parameters), optional($._body), "}"),

    block_parameters: ($) =>
      seq(
        "|",
        optional(seq($._block_parameter,
          repeat(seq(",", $._block_parameter)))),
        "|",
      ),

    _block_parameter: ($) =>
      choice(
        $.identifier,
        $.constant,
        $.typed_parameter,
        $.destructured_parameter,
      ),

    // Destructured block parameters: { |(head, *)| ... }. Splats live
    // only inside groups, matching the interpreter.
    destructured_parameter: ($) =>
      choice(
        seq("(", $._destructured_parameter_element, repeat(seq(",", $._destructured_parameter_element)), ")"),
        seq("[", $._destructured_parameter_element, repeat(seq(",", $._destructured_parameter_element)), "]"),
      ),

    _destructured_parameter_element: ($) =>
      choice(
        $.identifier,
        $.constant,
        $.typed_parameter,
        $.splat_target,
        $.splat_parameter,
        $.destructured_parameter,
      ),

    argument_list: ($) =>
      seq(
        $._paren_argument,
        repeat(seq(",", $._paren_argument)),
        optional(","),
      ),

    _paren_argument: ($) =>
      choice(
        $._argument,
        alias($._endless_range_closed, $.endless_range),
      ),

    _argument: ($) =>
      choice(
        $.keyword_argument,
        $.splat_argument,
        $.double_splat_argument,
        $._expression,
      ),

    keyword_argument: ($) =>
      prec.right(seq(
        field("key", choice($.identifier, $.constant, alias($._keyword_label, $.identifier))),
        token(prec(3, ":")),
        optional(field("value", $._expression_or_closed_range)),
      )),

    splat_argument: ($) =>
      seq("*", $._expression),

    double_splat_argument: ($) =>
      seq("**", $._expression),

    // --- Primaries ---

    parenthesized: ($) =>
      seq("(", $._expression_or_closed_range, ")"),

    array: ($) =>
      seq(
        "[",
        optional(
          seq(
            $._expression_or_closed_range,
            repeat(seq(",", $._expression_or_closed_range)),
            optional(","),
          ),
        ),
        "]",
      ),

    hash: ($) =>
      seq(
        choice("{", alias($._block_open, "{")),
        optional(
          seq(
            $.hash_entry,
            repeat(seq(",", $.hash_entry)),
            optional(","),
          ),
        ),
        "}",
      ),

    _body: ($) =>
      repeat1(choice($._non_alias_statement, $.class, $.method, ";")),

    // --- Terminals ---

    identifier: (_$) =>
      new RegExp(UNICODE.identifier, "u"),

    constant: (_$) =>
      new RegExp(UNICODE.constant, "u"),

    string_content: (_$) =>
      token.immediate(prec(1, /[^"\\#]+/)),

    true: (_$) => "true",
