test/corpus/calls.txt
================
Call splats
================

f(*args)
f(**opts)
f *args
f **opts

---

(program
  (call
    (identifier)
    (argument_list
      (splat_argument
        (identifier))))
  (call
    (identifier)
    (argument_list
      (double_splat_argument
        (identifier))))
  (command_call
    (identifier)
    (command_arguments
      (splat_argument
        (identifier))))
  (command_call
    (identifier)
    (command_arguments
      (double_splat_argument
        (identifier)))))

================
Combined splats keywords and an attached block
================

f(1, *rest, k: 2, **opts) { |value| value }

---

(program
  (call
    (identifier)
    (argument_list
      (integer)
      (splat_argument
        (identifier))
      (keyword_argument
        (identifier)
        (integer))
      (double_splat_argument
        (identifier)))
    (block
      (block_parameters
        (identifier))
      (identifier))))

================
Rest and keyword parameters with yield
================

def f(a: int, *rest: array<int>, k: int = 1, **opts: hash<string, int>, &block: int)
  yield(a)
end

---

(program
  (method
    (identifier)
    (parameters
      (typed_parameter
        (identifier)
        (type_annotation
          (type_name
            (identifier))))
      (splat_parameter
        (identifier)
        (type_annotation
          (type_name
            (identifier)
            (type_arguments
              (type_annotation
                (type_name
                  (identifier)))))))
      (typed_parameter
        (identifier)
        (type_annotation
          (type_name
            (identifier)))
        (integer))
      (double_splat_parameter
        (identifier)
        (type_annotation
          (type_name
            (identifier)
            (type_arguments
              (type_annotation
                (type_name
                  (identifier)))
              (type_annotation
                (type_name
                  (identifier)))))))
      (block_parameter
        (identifier)
        (block_type
          (type_annotation
            (type_name
              (identifier))))))
    (yield
      (argument_list
        (identifier)))))

================
Keyword parameters with defaults
================

def f(*, a: int = 1, b: int) -> int
  a
end

---

(program
  (method
    (identifier)
    (parameters
      (keyword_separator)
      (typed_parameter
        (identifier)
        (type_annotation
          (type_name
            (identifier)))
        (integer))
      (typed_parameter
        (identifier)
        (type_annotation
          (type_name
            (identifier)))))
    (return_type
      (type_annotation
        (type_name
          (identifier))))
    (identifier)))

================
Parenless command regex arguments
================

match /ID-[0-9]+/
scan /a+/i, text

---

(program
  (command_call
    (identifier)
    (command_arguments
      (regex)))
  (command_call
    (identifier)
    (command_arguments
      (regex)
      (identifier))))

================
Slash after a spaced operand stays division
================

puts total /2
x = total / 2

---

(program
  (command_call
    (identifier)
    (command_arguments
      (binary
        (identifier)
        (integer))))
  (assignment
    (identifier)
    (binary
      (identifier)
      (integer))))

================
Star with spaced operands stays multiplication
================

x = a * b
x *= 2

---

(program
  (assignment
    (identifier)
    (binary
      (identifier)
      (identifier)))
  (compound_assignment
    (identifier)
    (integer)))

================
Nested parenless command arguments
================

puts f 3, 4

---

(program
  (command_call
    (identifier)
    (command_arguments
      (command_call
        (identifier)
        (command_arguments
          (integer)
          (integer))))))

================
Spaced bracket opens an array command argument
================

puts [3, 1, 2].sort

---

(program
  (command_call
    (identifier)
    (command_arguments
      (member_access
        (array
          (integer)
          (integer)
          (integer))
        (identifier)))))

================
Array command arguments with further arguments
================

concat [1], [2]
f x, [1]

---

(program
  (command_call
    (identifier)
    (command_arguments
      (array
        (integer))
      (array
        (integer))))
  (command_call
    (identifier)
    (command_arguments
      (identifier)
      (array
        (integer)))))

================
Multiline array command argument
================

puts [
  3,
  1,
]

---

(program
  (command_call
    (identifier)
    (command_arguments
      (array
        (integer)
        (integer)))))

================
Flush brackets stay indexing
================

puts[1]
a[0]
a[0] = 1

---

(program
  (subscript
    (identifier)
    (integer))
  (subscript
    (identifier)
    (integer))
  (assignment
    (subscript
      (identifier)
      (integer))
    (integer)))

================
Self never takes a bracket command argument
================

class C
  def probe
    self [0]
  end
end

---

(program
  (class
    (constant)
    (method
      (identifier)
      (subscript
        (self)
        (integer)))))

================
Assignment to an array command argument
================

f [0] = 5

---

(program
  (command_call
    (identifier)
    (command_arguments
      (assignment
        (array
          (integer))
        (integer)))))

================
Splatted array command arguments
================

puts *["a", "b"]

---

(program
  (command_call
    method: (identifier)
    arguments: (command_arguments
      (splat_argument
        (array
          (string
            (string_content))
          (string
            (string_content)))))))

================
Keyword argument shorthand
================

def run(name: any)
  takes(name:, age: 42)
end

---

(program
  (method
    (identifier)
    (parameters
      (typed_parameter
        (identifier)
        (type_annotation
          (type_name
            (identifier)))))
    (call
      (identifier)
      (argument_list
        (keyword_argument
          (identifier))
        (keyword_argument
          (identifier)
          (integer))))))

================
Ampersand remains array intersection
================

a = [1, 2] & [2, 3]
locals = [1]
locals &other
locals & other

---

(program
  (assignment
    (identifier)
    (binary
      (array
        (integer)
        (integer))
      (array
        (integer)
        (integer))))
  (assignment
    (identifier)
    (array
      (integer)))
  (binary
    (identifier)
    (identifier))
  (binary
    (identifier)
    (identifier)))

================
Proc and lambda stay identifiers
================

proc = 5
lambda = 6
puts proc + lambda

---

(program
  (assignment
    (identifier)
    (integer))
  (assignment
    (identifier)
    (integer))
  (command_call
    (identifier)
    (command_arguments
      (binary
        (identifier)
        (identifier)))))
