test/corpus/classes.txt
================
Class with property and methods
================

class Point
  property x, y

  def initialize(@x: any, @y: any)
  end
end

---

(program
  (class
    name: (constant)
    (property_declaration
      (accessor_name
        (identifier))
      (accessor_name
        (identifier)))
    (method
      name: (identifier)
      (parameters
        (ivar_parameter
          (instance_variable)
          (type_annotation
            (type_name
              (identifier))))
        (ivar_parameter
          (instance_variable)
          (type_annotation
            (type_name
              (identifier))))))))

================
Class with getter and setter
================

class Person
  getter age
  setter name

  def initialize(name: any)
    @name = name
    @age = 0
  end
end

---

(program
  (class
    name: (constant)
    (getter_declaration
      (accessor_name
        (identifier)))
    (setter_declaration
      (accessor_name
        (identifier)))
    (method
      name: (identifier)
      (parameters
        (typed_parameter
          name: (identifier)
          (type_annotation
            (type_name
              (identifier)))))
      (assignment
        (instance_variable)
        (identifier))
      (assignment
        (instance_variable)
        (integer)))))

================
Class with class variable and class method
================

class Counter
  @@instances = 0

  def initialize
    @@instances = @@instances + 1
  end

  def self.instances
    @@instances
  end
end

---

(program
  (class
    name: (constant)
    (class_variable_assignment
      (class_variable)
      (integer))
    (method
      name: (identifier)
      (assignment
        (class_variable)
        (binary
          (class_variable)
          (integer))))
    (method
      name: (self_method_name
        (identifier))
      (class_variable))))

================
Class with typed accessors
================

class User
  property name: string
  getter age: int?
  setter tag: string
end

---

(program
  (class
    name: (constant)
    (property_declaration
      (accessor_name
        (identifier)
        (type_annotation
          (type_name
            (identifier)))))
    (getter_declaration
      (accessor_name
        (identifier)
        (type_annotation
          (type_name
            (identifier)))))
    (setter_declaration
      (accessor_name
        (identifier)
        (type_annotation
          (type_name
            (identifier)))))))

================
Class with typed multi-name property
================

class Point
  property x: int, y: int
end

---

(program
  (class
    name: (constant)
    (property_declaration
      (accessor_name
        (identifier)
        (type_annotation
          (type_name
            (identifier))))
      (accessor_name
        (identifier)
        (type_annotation
          (type_name
            (identifier)))))))

================
Setter method definitions
================

class Account
  def balance=(value: any)
    @balance = value
  end

  def self.default=(value: any)
    @@default = value
  end
end

---

(program
  (class
    name: (constant)
    (method
      name: (setter_name
        (identifier))
      (parameters
        (typed_parameter
          name: (identifier)
          (type_annotation
            (type_name
              (identifier)))))
      (assignment
        (instance_variable)
        (identifier)))
    (method
      name: (self_method_name
        (identifier))
      (parameters
        (typed_parameter
          name: (identifier)
          (type_annotation
            (type_name
              (identifier)))))
      (assignment
        (class_variable)
        (identifier)))))
